fix style for youtube size on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -41,6 +41,24 @@ b {
 .text_center {
   text-align: center;
 }
+.iframe_wrapper {
+  position: relative;
+  width: 100%;
+}
+.iframe_wrapper:before {
+  content:"";
+  display: block;
+  padding-top: 62.5%;
+}
+.iframe_wrapper iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
+
 .page_container {
   text-align: center;
 }
